// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SankeyChartUIHelper configBuckets sets the correct values when correct items are passed 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass metric and some attributes from 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "date",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass metric and some attributes to 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass metric and some attributes without attribute from/to 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass metric, attribute from, and some attributes without attribute to 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass metric, attribute to, and some attributes without attribute from 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;

exports[`SankeyChartUIHelper configBuckets sets the correct values when pass multi metrics/attributes from/to  1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "localIdentifier": "m1",
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "localIdentifier": "a3",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": undefined,
  "uiConfig": undefined,
}
`;
